Fix available commands read of soft enums at the end. Fix varint reads for MCPE packets.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -102,8 +102,8 @@ QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 SurvivalCraft.Enabled=false
-#Plotter.Enabled=false
-#BuilderBase.Enabled=false
+Plotter.Enabled=false
+BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
