--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -15,16 +15,16 @@ ViewDistance=20
 MaxViewDistance=20
 MoveRenderDistance=1
 CalculateLights=true
-#CalculateLights.MakeMovie=false
+#CalculateLights.MakeMovie=true
 
 # Game mode and rules
 GameMode=Survival
 #GameMode=Creative
 Player.GameMode=Creative
 CheckForSafeSpawn=true
-EnableBlockTicking=true
-EnableChunkTicking=true
-GameRule.DoMobspawning=true
+EnableBlockTicking=false
+EnableChunkTicking=false
+GameRule.DoMobspawning=false
 GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
@@ -111,7 +111,7 @@ SafePay.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMoveEntityDelta
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMoveEntityDelta|McpeUpdateBlock
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeClientToServerHandshake=0
 TracePackets.Verbosity.McpeAddEntity=0
