--- a/src/MiNET/MiNET.Console/MiNET.Console.csproj
+++ b/src/MiNET/MiNET.Console/MiNET.Console.csproj
@@ -12,10 +12,14 @@
 
   <ItemGroup>
     <None Remove="log4net.xml" />
+    <None Remove="server.conf" />
     <None Remove="server.nicke_000.conf" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="server.conf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="server.nicke_000.conf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
