--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -1,6 +1,6 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
-#UseEncryption=false
+UseEncryption=false
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
