Single tick model for RakNet.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -111,7 +111,7 @@ SafePay.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMoveEntityDelta|McpeUpdateBlock
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity|McpeMoveEntityDelta|McpeUpdateBlock
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeClientToServerHandshake=0
 TracePackets.Verbosity.McpeAddEntity=0
