EDU on 1.4. Need fix to inventory.

--- a/src/MiNET/MiNET.Client/MiNET.Client.csproj
+++ b/src/MiNET/MiNET.Client/MiNET.Client.csproj
@@ -21,4 +21,10 @@
     <ProjectReference Include="..\MiNET\MiNET.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="server.conf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
