Add EDU blocks.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -111,7 +111,7 @@ SafePay.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity|McpeMoveEntityDelta|McpeUpdateBlock
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity|McpeMoveEntityDelta
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeClientToServerHandshake=0
 TracePackets.Verbosity.McpeAddEntity=0
@@ -121,7 +121,6 @@ TracePackets.Verbosity.McpePlayerList=0
 TracePackets.Verbosity.McpeAnimate=0
 TracePackets.Verbosity.McpeInteract=0
 TracePackets.Verbosity.McpeMobArmorEquipment=0
-TracePackets.Verbosity.McpeUpdateBlock=0
 TracePackets.Verbosity.McpeUseItem=0
 TracePackets.Verbosity.McpeResourcePackDataInfo=0
 TracePackets.Verbosity.McpeAdventureSettings=0
@@ -136,3 +135,4 @@ TracePackets.Verbosity.McpeModalFormResponse=0
 TracePackets.Verbosity.McpeContainerClose=0
 TracePackets.Verbosity.McpeMoveEntity=0
 TracePackets.Verbosity.McpeRiderJump=0
+TracePackets.Verbosity.McpeUpdateBlock=1
