fnbt is now .NET Core too.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -24,9 +24,9 @@ GameMode=Survival
 #GameMode=Creative
 Player.GameMode=Creative
 CheckForSafeSpawn=true
-EnableBlockTicking=false
-EnableChunkTicking=false
-GameRule.DoMobspawning=false
+EnableBlockTicking=true
+EnableChunkTicking=true
+GameRule.DoMobspawning=true
 GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
