Fix config (don't do games on EDU)

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -88,8 +88,8 @@ Unload.Interval=10
 EnableCommands=true
 
 #PluginDirectory=../../../../TestPlugin/bin/Release/netcoreapp2.1;
-#PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp2.1;../../../../MiNET.BuilderBase/bin/Debug/netcoreapp2.1;../../../../MiNET.Plotter/bin/Debug/netcoreapp2.1
-PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug\netcoreapp2.1;
+PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp2.1;../../../../MiNET.BuilderBase/bin/Debug/netcoreapp2.1;../../../../MiNET.Plotter/bin/Debug/netcoreapp2.1
+#PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug\netcoreapp2.1;
 
 PlotWorld=D:\Temp\TestSave
 PlotStorage=D:\Temp\TestSave\plots
