Generate oak and birch trees. Also grows from bonemeal.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -22,10 +22,10 @@ GameMode=Survival
 #GameMode=Creative
 Player.GameMode=Creative
 CheckForSafeSpawn=true
-EnableBlockTicking=false
-EnableChunkTicking=false
-GameRule.DoMobspawning=false
-GameRule.DoDaylightcycle=false
+EnableBlockTicking=true
+EnableChunkTicking=true
+GameRule.DoMobspawning=true
+GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
 
