--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -18,14 +18,15 @@ CalculateLights=true
 #CalculateLights.MakeMovie=true
 
 # Game mode and rules
-GameMode=Survival
 #GameMode=Creative
-Player.GameMode=Creative
+GameMode=Survival
+#Player.GameMode=Creative
+Player.GameMode=Survival
 CheckForSafeSpawn=true
 EnableBlockTicking=true
 EnableChunkTicking=true
 GameRule.DoMobspawning=true
-GameRule.DoDaylightcycle=true
+GameRule.DoDaylightcycle=false
 GameRule.KeepInventory=true
 
 
@@ -51,8 +52,8 @@ PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestSave
 #PCWorldFolder=D:\Temp\TestSave130
 #Save.Enabled=true
-Save.Interval=30
-Unload.Interval=10
+#Save.Interval=30
+#Unload.Interval=10
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
@@ -135,4 +136,4 @@ TracePackets.Verbosity.McpeModalFormResponse=0
 TracePackets.Verbosity.McpeContainerClose=0
 TracePackets.Verbosity.McpeMoveEntity=0
 TracePackets.Verbosity.McpeRiderJump=0
-TracePackets.Verbosity.McpeUpdateBlock=1
+TracePackets.Verbosity.McpeUpdateBlock=0
