Add awesome worldgenerator, (Biomes, ores etc) get rid of libnoise dependency.

--- a/src/MiNET/MiNET.Console/server.conf
+++ b/src/MiNET/MiNET.Console/server.conf
@@ -5,7 +5,7 @@
 #ForceOrderingForAll=false
 #ForceXBLAuthentication=false
 
-motd=MiNET Server
+motd=MiNET Biome World Generator
 motd-2nd=
 
 ViewDistance=20
@@ -24,7 +24,8 @@ GameRule.DoMobspawning=true
 GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
-
+Seed=Gurun Is amazing :3
+WorldProvider=survival
 PCWorldFolder=D:\Development\DOES NOT EXIST
 #Save.Enabled=true
 Save.Interval=30
