Armor and fix for client/emulator.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -1,7 +1,7 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
-UseEncryption=false
-#UseEncryptionForAll=true
+UseEncryption=true
+UseEncryptionForAll=true
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
 
@@ -18,16 +18,16 @@ CalculateLights=true
 #CalculateLights.MakeMovie=true
 
 # Game mode and rules
-#GameMode=Creative
-GameMode=Survival
-#Player.GameMode=Creative
-Player.GameMode=Survival
+GameMode=Creative
+#GameMode=Survival
+Player.GameMode=Creative
+#Player.GameMode=Survival
 CheckForSafeSpawn=true
-EnableBlockTicking=true
-EnableChunkTicking=true
-GameRule.DoMobspawning=true
+EnableBlockTicking=false
+EnableChunkTicking=false
+GameRule.DoMobspawning=false
+GameRule.KeepInventory=false
 GameRule.DoDaylightcycle=false
-GameRule.KeepInventory=true
 
 
 Pathfinder.PrintPath=false
@@ -98,7 +98,7 @@ HorizontalSchematic=D:\Development\Worlds\QuackSchematics\horizontal.schematic
 VerticalSchematic=D:\Development\Worlds\QuackSchematics\vertical.schematic
 MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 
-#PluginDisabled=true
+PluginDisabled=true
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
