Fix sliders value conversions.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -98,7 +98,7 @@ HorizontalSchematic=D:\Development\Worlds\QuackSchematics\horizontal.schematic
 VerticalSchematic=D:\Development\Worlds\QuackSchematics\vertical.schematic
 MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 
-PluginDisabled=true
+#PluginDisabled=true
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
