Fix plot plugin.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -16,18 +16,18 @@ WorldProvider=anvil
 ViewDistance=20
 MaxViewDistance=20
 MoveRenderDistance=1
-CalculateLights=true
+#CalculateLights=true
 #CalculateLights.MakeMovie=true
 
 # Game mode and rules
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 Player.GameMode=Creative
 CheckForSafeSpawn=true
-EnableBlockTicking=true
-EnableChunkTicking=true
-GameRule.DoMobspawning=true
-GameRule.DoDaylightcycle=true
+#EnableBlockTicking=true
+#EnableChunkTicking=true
+#GameRule.DoMobspawning=true
+#GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
 
@@ -48,13 +48,20 @@ Pathfinder.PrintPath=false
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
-PCWorldFolder=D:\Development\DOES NOT EXIST
+#PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
 #PCWorldFolder=D:\Temp\TestSave
 #PCWorldFolder=D:\Temp\TestSave130
-#Save.Enabled=true
+
+# Plotter
+#PCWorldFolder=D:\Temp\PlotWorld
+#PCWorldFolder=D:\Temp\TestWorld
+#PCWorldFolder=D:\Temp\TestSave
+PCWorldFolder=D:\Temp\TestSave130
+
+Save.Enabled=true
 Save.Interval=30
-Unload.Interval=10
+Unload.Interval=0
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
@@ -91,21 +98,12 @@ EnableCommands=true
 PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp2.1;../../../../MiNET.BuilderBase/bin/Debug/netcoreapp2.1;../../../../MiNET.Plotter/bin/Debug/netcoreapp2.1
 #PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug\netcoreapp2.1;
 
-PlotWorld=D:\Temp\TestSave
-PlotStorage=D:\Temp\TestSave\plots
-PlayerDataDirectory=D:\Temp\TestSave\playerdata
-
-HorizontalSchematic=D:\Development\Worlds\QuackSchematics\horizontal.schematic
-VerticalSchematic=D:\Development\Worlds\QuackSchematics\vertical.schematic
-MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
-
 #PluginDisabled=true
-QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 SurvivalCraft.Enabled=false
-Plotter.Enabled=false
-BuilderBase.Enabled=false
+#Plotter.Enabled=false
+#BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
@@ -113,7 +111,7 @@ SafePay.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity|McpeMoveEntityDelta
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity|McpeMoveEntityDelta|McpeUpdateBlock
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeClientToServerHandshake=0
 TracePackets.Verbosity.McpeAddEntity=0
@@ -137,4 +135,4 @@ TracePackets.Verbosity.McpeModalFormResponse=0
 TracePackets.Verbosity.McpeContainerClose=0
 TracePackets.Verbosity.McpeMoveEntity=0
 TracePackets.Verbosity.McpeRiderJump=0
-TracePackets.Verbosity.McpeUpdateBlock=1
+TracePackets.Verbosity.McpeUpdateBlock=0
