Use chunk coordinates where they are .. used.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -90,21 +90,12 @@ EnableCommands=true
 PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp2.1;../../../../MiNET.BuilderBase/bin/Debug/netcoreapp2.1;../../../../MiNET.Plotter/bin/Debug/netcoreapp2.1
 #PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug\netcoreapp2.1;
 
-PlotWorld=D:\Temp\TestSave
-PlotStorage=D:\Temp\TestSave\plots
-PlayerDataDirectory=D:\Temp\TestSave\playerdata
-
-HorizontalSchematic=D:\Development\Worlds\QuackSchematics\horizontal.schematic
-VerticalSchematic=D:\Development\Worlds\QuackSchematics\vertical.schematic
-MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
-
 #PluginDisabled=true
-QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 SurvivalCraft.Enabled=false
 Plotter.Enabled=false
-BuilderBase.Enabled=false
+#BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
