Fix PlayerMob skin update changes. Don't crash the client. Refactor MiNET Client to make it easier to use it standalone. Have a message handler interface it is working from that can be overriden via a property.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -23,7 +23,7 @@ GameMode=Survival
 Player.GameMode=Creative
 #Player.GameMode=Survival
 CheckForSafeSpawn=true
-EnableBlockTicking=true
+EnableBlockTicking=false
 EnableChunkTicking=true
 GameRule.DoMobspawning=true
 GameRule.KeepInventory=true
@@ -100,7 +100,7 @@ Plotter.Enabled=false
 BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
-Code4Fun.Enabled=false
+Code4Fun.Enabled=true
 SafePay.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
