--- a/src/MiNET/TestPlugin/TestPlugin.csproj
+++ b/src/MiNET/TestPlugin/TestPlugin.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\MiNET\MiNET.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="test_skin.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
