--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -5,39 +5,39 @@ EnableEdu=false
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
 #TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMovePlayer
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity|McpeMoveEntityDelta
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeMovePlayer=0
-TracePackets.Verbosity.McpeStartGame=1
-TracePackets.Verbosity.McpeAdventureSettings=1
-TracePackets.Verbosity.McpeAddPlayer=1
+TracePackets.Verbosity.McpeStartGame=0
+TracePackets.Verbosity.McpeAdventureSettings=0
+TracePackets.Verbosity.McpeAddPlayer=0
 TracePackets.Verbosity.McpeAddEntity=0
-TracePackets.Verbosity.McpeAddItemEntity=1
-TracePackets.Verbosity.McpeSetEntityMotion=1
+TracePackets.Verbosity.McpeAddItemEntity=0
+TracePackets.Verbosity.McpeSetEntityMotion=0
 TracePackets.Verbosity.McpePlayerList=0
 TracePackets.Verbosity.McpeContainerSetContent=0
-TracePackets.Verbosity.McpeAnimate=1
-TracePackets.Verbosity.McpeInteract=1
-TracePackets.Verbosity.McpeUpdateBlock=1
-TracePackets.Verbosity.McpeLevelEvent=1
-TracePackets.Verbosity.McpeEntityEvent=1
-TracePackets.Verbosity.McpePlayerAction=1
-TracePackets.Verbosity.McpeRemoveBlock=1
-TracePackets.Verbosity.McpeUseItem=1
+TracePackets.Verbosity.McpeAnimate=0
+TracePackets.Verbosity.McpeInteract=0
+TracePackets.Verbosity.McpeUpdateBlock=0
+TracePackets.Verbosity.McpeLevelEvent=0
+TracePackets.Verbosity.McpeEntityEvent=0
+TracePackets.Verbosity.McpePlayerAction=0
+TracePackets.Verbosity.McpeRemoveBlock=0
+TracePackets.Verbosity.McpeUseItem=0
 TracePackets.Verbosity.McpeResourcePackDataInfo=0
 TracePackets.Verbosity.McpeAvailableCommands=0
-TracePackets.Verbosity.McpeCommandStep=1
+TracePackets.Verbosity.McpeCommandStep=0
 TracePackets.Verbosity.McpeContainerOpen=0
 TracePackets.Verbosity.McpeMapInfoRequest=0
 TracePackets.Verbosity.McpeClientboundMapItemData=0
-TracePackets.Verbosity.McpeMobArmorEquipment=1
-TracePackets.Verbosity.McpeMobEquipment=1
-TracePackets.Verbosity.McpeExplode=1
-TracePackets.Verbosity.McpeEvent=1
-TracePackets.Verbosity.McpeInventoryTransaction=1
-TracePackets.Verbosity.McpeLevelSoundEvent=1
-TracePackets.Verbosity.McpeAddPainting=1
-TracePackets.Verbosity.McpeSetEntityLink=1
-TracePackets.Verbosity.McpePlayerHotbar=1
-TracePackets.Verbosity.McpeUpdateEquipment=1
-TracePackets.Verbosity.McpeUpdateBlockSynced=1
+TracePackets.Verbosity.McpeMobArmorEquipment=0
+TracePackets.Verbosity.McpeMobEquipment=0
+TracePackets.Verbosity.McpeExplode=0
+TracePackets.Verbosity.McpeEvent=0
+TracePackets.Verbosity.McpeInventoryTransaction=0
+TracePackets.Verbosity.McpeLevelSoundEvent=0
+TracePackets.Verbosity.McpeAddPainting=0
+TracePackets.Verbosity.McpeSetEntityLink=0
+TracePackets.Verbosity.McpePlayerHotbar=0
+TracePackets.Verbosity.McpeUpdateEquipment=0
+TracePackets.Verbosity.McpeUpdateBlockSynced=0
