Fixed moving custom items in player's inventory.
- Moving custom items in player's inventory no longer creates new item
from ItemFactory.
- SetFirstEmptySlot no longer creates new item from ItemFactory.
- Added hash property to extradata so custom items with different
GetHashCode will not stack on client side.

--- a/src/MiNET/MiNET.Console/server.conf
+++ b/src/MiNET/MiNET.Console/server.conf
@@ -35,7 +35,7 @@ EnableCommands=true
 PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp2.1;../../../../MiNET.BuilderBase/bin/Debug/netcoreapp2.1;../../../../MiNET.Plotter/bin/Debug/netcoreapp2.1
 
 #PluginDisabled=true
-NiceLobby.Enabled=false
+NiceLobby.Enabled=true
 CoreCommands.Enabled=false
 Plotter.Enabled=false
 SurvivalCraft.Enabled=false
