Bedrock 1.7 without the new packets.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -24,8 +24,8 @@ Player.GameMode=Creative
 #Player.GameMode=Survival
 CheckForSafeSpawn=true
 EnableBlockTicking=false
-EnableChunkTicking=true
-GameRule.DoMobspawning=true
+EnableChunkTicking=false
+GameRule.DoMobspawning=false
 GameRule.KeepInventory=true
 GameRule.DoDaylightcycle=true
 
@@ -47,7 +47,7 @@ Pathfinder.PrintPath=true
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
-#PCWorldFolder=D:\Development\DOES NOT EXIST
+PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
 #PCWorldFolder=D:\Temp\TestSave
 
@@ -60,7 +60,7 @@ Pathfinder.PrintPath=true
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
 #PCWorldFolder=D:\Development\Worlds\UHC\UHCr1000
-PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
+#PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
 
 # Cool worlds for testing
 #PCWorldFolder=D:\Development\Worlds\Waka_Islands_2_v0.4\WAKA ISLANDS 2 - V0.4
