Render bbox now with custom geometry instead of particles. Only for debugging.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -30,7 +30,7 @@ GameRule.KeepInventory=true
 GameRule.DoDaylightcycle=true
 
 
-Pathfinder.PrintPath=true
+#Pathfinder.PrintPath=true
 #Profiler.Enabled=true
 
 # Bad light worlds
