--- a/src/MiNET/MiNET.Console/server.conf
+++ b/src/MiNET/MiNET.Console/server.conf
@@ -35,7 +35,7 @@ EnableCommands=true
 PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp2.1;../../../../MiNET.BuilderBase/bin/Debug/netcoreapp2.1;../../../../MiNET.Plotter/bin/Debug/netcoreapp2.1
 
 #PluginDisabled=true
-NiceLobby.Enabled=true
+NiceLobby.Enabled=false
 CoreCommands.Enabled=false
 Plotter.Enabled=false
 SurvivalCraft.Enabled=false
