Ignore server.conf files (except default one and server.nicke_000.conf)

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 *.user
 *.sln.docstates
 
+# User-specific server config
+server.*.conf
+!server.nicke_000.conf
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
