Fix server.conf to default EDU

--- a/src/MiNET/MiNET.Console/server.conf
+++ b/src/MiNET/MiNET.Console/server.conf
@@ -5,8 +5,9 @@
 #ForceOrderingForAll=false
 #ForceXBLAuthentication=false
 
-motd=MiNET Server
-motd-2nd=
+motd=Educational Edition Server
+motd-2nd=MiNET
+EnableEdu=true
 
 ViewDistance=20
 MaxViewDistance=8
@@ -14,8 +15,8 @@ MoveRenderDistance=1
 CalculateLights=true
 
 # Game mode and rules
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 Player.GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=true
