--- a/.editorconfig
+++ b/.editorconfig
@@ -41,7 +41,7 @@ dotnet_style_prefer_inferred_tuple_names = true:suggestion
 dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
 dotnet_style_null_propagation = true:suggestion 
 dotnet_style_coalesce_expression = true:suggestion 
-dotnet_style_prefer_is_null_check_over_reference_equality_method = false:silent
+dotnet_style_prefer_is_null_check_over_reference_equality_method = true:silent
 dotnet_prefer_inferred_tuple_names = true:suggestion 
 dotnet_prefer_inferred_anonymous_type_member_names = true:suggestion 
 dotnet_style_prefer_auto_properties = true:silent 
@@ -64,9 +64,9 @@ dotnet_naming_symbols.constant_fields.required_modifiers          = const
 ############################### 
 [*.cs] 
 # var preferences 
-csharp_style_var_for_built_in_types = true:suggestion 
+csharp_style_var_for_built_in_types = false:suggestion 
 csharp_style_var_when_type_is_apparent = true:suggestion 
-csharp_style_var_elsewhere = true:suggestion 
+csharp_style_var_elsewhere = false:suggestion
 # Expression-bodied members 
 csharp_style_expression_bodied_methods = false:silent 
 csharp_style_expression_bodied_constructors = false:silent 
