Fix filename for LevelDB worlds. Use new property in server.conf "LevelDBWorldFolder"

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -36,6 +36,9 @@ GameRule.DoDaylightcycle=true
 #Pathfinder.PrintPath=true
 #Profiler.Enabled=true
 
+#LevelDB TEST
+LevelDBWorldFolder=C:\Users\nicke_000\AppData\Local\Temp\My World.mcworld
+
 # Bad light worlds
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.inca
