Added "Alex Chunks". This will send light data to the client like old-school chunks used to have it. We can use this to test light-calulations with the Alex client made by @kennyvv. Kan be enabled by setting a property in the server.config => UseAlexChunks=true

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -18,6 +18,7 @@ ViewDistance=20
 MaxViewDistance=20
 MoveRenderDistance=1
 CalculateLights=true
+UseAlexChunks=false
 #CalculateLights.MakeMovie=true
 
 # Game mode and rules
