Fix behaviours. Still needs a lot of work.

--- a/src/MiNET/MiNET.Console/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Console/server.nicke_000.conf
@@ -1,7 +1,7 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
 UseEncryption=true
-UseEncryptionForAll=true
+UseEncryptionForAll=false
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
 
@@ -27,8 +27,8 @@ GameMode=Survival
 Player.GameMode=Creative
 #Player.GameMode=Survival
 CheckForSafeSpawn=true
-EnableBlockTicking=false
-EnableChunkTicking=false
+EnableBlockTicking=true
+EnableChunkTicking=true
 GameRule.DoMobspawning=false
 GameRule.KeepInventory=true
 GameRule.DoDaylightcycle=true
@@ -53,8 +53,13 @@ LevelDBWorldFolder=C:\Users\nicke_000\AppData\Local\Temp\My World.mcworld
 
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
-# TEST
-#PCWorldFolder=D:\Development\DOES NOT EXIST
+# DEVELOPMENT
+PCWorldFolder=D:\Development\DOES NOT EXIST
+
+#Save.Enabled=true
+#Save.Interval=30
+#PCWorldFolder=D:\Temp\DevelopmentWorld
+
 #PCWorldFolder=D:\Temp\TestWorld
 #PCWorldFolder=D:\Temp\TestSave
 
@@ -73,7 +78,7 @@ LevelDBWorldFolder=C:\Users\nicke_000\AppData\Local\Temp\My World.mcworld
 #PCWorldFolder=D:\Development\Worlds\Waka_Islands_2_v0.4\WAKA ISLANDS 2 - V0.4
 #PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
 #PCWorldFolder=D:\Temp\UHCr1000
-PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
+#PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
 #PCWorldFolder=D:\Development\Worlds\RAMM-Craft Hedgeland Map\RAMM-Craft Hedgeland Map
