--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -1,5 +1,7 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
+serverid=4080284420030544738
+
 UseEncryption=true
 UseEncryptionForAll=false
 #ForceOrderingForAll=false
@@ -25,11 +27,11 @@ UseAlexChunks=false
 # Game mode and rules
 #GameMode=Creative
 GameMode=Survival
-Player.GameMode=Creative
+Player.GameMode=Survival
 #Player.GameMode=Survival
 CheckForSafeSpawn=true
-EnableBlockTicking=true
-EnableChunkTicking=true
+EnableBlockTicking=false
+EnableChunkTicking=false
 GameRule.DoMobspawning=false
 GameRule.KeepInventory=true
 GameRule.DoDaylightcycle=true
@@ -113,12 +115,12 @@ Plotter.Enabled=false
 BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
-Code4Fun.Enabled=true
+Code4Fun.Enabled=false
 SafePay.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity|McpeMoveEntityDelta|McpeLevelEvent
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity|McpeMoveEntityDelta|McpeLevelEvent|ConnectedPing|ConnectedPong
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeClientToServerHandshake=0
 TracePackets.Verbosity.McpeAddEntity=0
@@ -143,3 +145,10 @@ TracePackets.Verbosity.McpeContainerClose=0
 TracePackets.Verbosity.McpeMoveEntity=0
 TracePackets.Verbosity.McpeRiderJump=0
 TracePackets.Verbosity.McpeUpdateBlock=0
+TracePackets.Verbosity.McpeStartGame=0
+TracePackets.Verbosity.McpeAvailableCommands=0
+TracePackets.Verbosity.McpeCraftingData=0
+TracePackets.Verbosity.McpeLevelSoundEvent=1
+
+
+
