--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -57,7 +57,7 @@ LevelDBWorldFolder=C:\Users\nicke_000\AppData\Local\Temp\My World.mcworld
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # DEVELOPMENT
-PCWorldFolder=D:\Development\DOES NOT EXIST
+#PCWorldFolder=D:\Development\DOES NOT EXIST
 
 #Save.Enabled=true
 #Save.Interval=30
@@ -67,10 +67,10 @@ PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestSave
 
 # Plotter
-#PCWorldFolder=D:\Temp\PlotterWorld
-#Save.Enabled=true
-#Save.Interval=30
-#Unload.Interval=10
+PCWorldFolder=C:\Temp\PlotterWorld
+Save.Enabled=true
+Save.Interval=30
+Unload.Interval=10
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
@@ -109,10 +109,10 @@ PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp2.1;../../../../MiNET
 
 #PluginDisabled=true
 #NiceLobby.Enabled=false
-#CoreCommands.Enabled=false
+CoreCommands.Enabled=false
 SurvivalCraft.Enabled=false
-Plotter.Enabled=false
-BuilderBase.Enabled=false
+#Plotter.Enabled=false
+#BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
