Update command implementation with adjusted value identifiers. Also added RelValue for relative single values. Added more standard enumerations for standard vanilla stuff. Unit tests for commands. Refactored command tests to its own plugin.

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -111,9 +111,10 @@ PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp3.0;../../../../MiNET
 #PluginDisabled=true
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
+#CommandsTest.Enabled=false
 SurvivalCraft.Enabled=false
 Plotter.Enabled=false
-#BuilderBase.Enabled=false
+BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
