ServiceKiller and MiNETClient now also working with the MiNET Server :-P

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -1,12 +1,12 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
 serverid=4080284420030544738
-
+MaxNumberOfPlayers=1000
 UseEncryption=true
 UseEncryptionForAll=false
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
-ServerInfoInTitle=true
+ServerInfoInTitle=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
