Implement changes to geometry and skins in general. Making sure PlayerMob show up. Replace image library with .NET Core version of drawing.

--- a/src/MiNET/MiNET.Test/MiNET.Test.csproj
+++ b/src/MiNET/MiNET.Test/MiNET.Test.csproj
@@ -18,6 +18,13 @@
   <ItemGroup>
     <ProjectReference Include="..\MiNET.Client\MiNET.Client.csproj" />
     <ProjectReference Include="..\MiNET\MiNET.csproj" />
+    <ProjectReference Include="..\TestPlugin\TestPlugin.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="geometry.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
