--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -44,7 +44,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CoreCompat.System.Drawing.v2" Version="5.2.0-preview1-r131" />
 		<PackageReference Include="jose-jwt" Version="2.4.0" />
 		<PackageReference Include="LibNoise.NetStandart" Version="0.2.0" />
 		<PackageReference Include="log4net" Version="2.0.8" />
@@ -55,6 +54,7 @@
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
 		<PackageReference Include="Portable.BouncyCastle" Version="1.8.5" />
 		<PackageReference Include="SharpAvi" Version="2.1.1" />
+		<PackageReference Include="System.Drawing.Common" Version="4.7.0" />
 		<PackageReference Include="System.Net.Sockets" Version="4.3.0" />
 		<PackageReference Include="System.Security.Cryptography.ProtectedData" Version="4.5.0" />
 	</ItemGroup>
