Fix skins. Again.

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -22,7 +22,7 @@ ViewDistance=11
 MaxViewDistance=11
 MoveRenderDistance=1
 CalculateLights=true
-UseAlexChunks=true
+#UseAlexChunks=true
 #CalculateLights.MakeMovie=true
 
 # Game mode and rules
