Major .NET Core 3.1 rehauld of networking. - Packet pooling disabled - Using pooled memory streams on large packets (static) - Decoding use input buffer for memory stream. - Async send for hot-path. Still need work. - Net result is 1000 players, 50 levels -> 25% CPU (down by 10%). Still very friendly on memory, but need to monitor GC.
Fix bug for skins not loading. No parsing outside the Skins API.

--- a/src/MiNET/MiNET.Console/MiNET.Console.csproj
+++ b/src/MiNET/MiNET.Console/MiNET.Console.csproj
@@ -9,6 +9,11 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
 
   <ItemGroup>
     <None Remove="log4net.xml" />
