--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -1,7 +1,7 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
 serverid=4080284420030544738
-MaxNumberOfPlayers=1000
+MaxNumberOfPlayers=5000
 UseEncryption=true
 UseEncryptionForAll=false
 #ForceOrderingForAll=false
@@ -21,7 +21,7 @@ WorldProvider=anvil
 ViewDistance=11
 MaxViewDistance=11
 MoveRenderDistance=1
-CalculateLights=true
+CalculateLights=false
 #UseAlexChunks=true
 #CalculateLights.MakeMovie=true
 
