--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -25,6 +25,11 @@
 	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <DebugType>full</DebugType>
+	  <DebugSymbols>true</DebugSymbols>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<None Remove="Blocks\blockstates.json" />
 		<None Remove="Blocks\legacy_id_map.json" />
@@ -47,11 +52,11 @@
 		<PackageReference Include="jose-jwt" Version="2.4.0" />
 		<PackageReference Include="LibNoise.NetStandart" Version="0.2.0" />
 		<PackageReference Include="log4net" Version="2.0.8" />
-		<PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.2.2" />
+		<PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.3.2" />
 		<PackageReference Include="MiNET.astar" Version="1.0.14" />
 		<PackageReference Include="MiNET.fnbt" Version="1.0.22" />
 		<PackageReference Include="MiNET.LevelDB" Version="1.0.14" />
-		<PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 		<PackageReference Include="Portable.BouncyCastle" Version="1.8.5" />
 		<PackageReference Include="SharpAvi" Version="2.1.1" />
 		<PackageReference Include="System.Drawing.Common" Version="4.7.0" />
