More refactoring of send/receive pipes. New interface to intercept packets and do custom parsing.

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -104,11 +104,11 @@ PCWorldFolder=C:\Development\DOES NOT EXIST
 
 EnableCommands=true
 
-#PluginDirectory=../../../../TestPlugin/bin/Release/netcoreapp3.0;
-PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp3.0;../../../../MiNET.BuilderBase/bin/Debug/netcoreapp3.0;../../../../MiNET.Plotter/bin/Debug/netcoreapp3.0
-#PluginDirectory=C:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug\netcoreapp3.0;
+#PluginDirectory=../../../../TestPlugin/bin/Release/netcoreapp3.1;
+PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp3.1;../../../../MiNET.BuilderBase/bin/Debug/netcoreapp3.1;../../../../MiNET.Plotter/bin/Debug/netcoreapp3.1
+#PluginDirectory=C:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug\netcoreapp3.1;
 
-#PluginDisabled=true
+PluginDisabled=true
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 #CommandsTest.Enabled=false
